--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy: 
       matrix:
-        target: [ x86_64-unknown-linux-musl,x86_64-apple-darwin,x86_64-pc-windows-gnu]
+        target: [ x86_64-unknown-linux-musl,x86_64-pc-windows-gnu]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -57,15 +57,15 @@ jobs:
       - name: Package
         shell: bash
         run: |
-          #strip target/${{ matrix.target }}/release/testmest
+          #strip target/${{ matrix.target }}/release/eagle
           cd target/${{ matrix.target }}/release          
-          tar czvf ../../../testmest-${{ matrix.target }}.tar.gz testmest
+          tar czvf ../../../eagle-${{ matrix.target }}.tar.gz eagle
           cd -
       - name: Publish
         uses: softprops/action-gh-release@v1
         # TODO: if any of the build step fails, the release should be deleted.
         with:
-            files: 'testmest*'
+            files: 'eagle*'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
