--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy: 
       matrix:
-        target: [x86_64-unknown-linux-gnu,x86_64-pc-windows-gnu]
+        target: [x86_64-unknown-linux-gnu,x86_64-pc-windows-gnu,x86_64-unknown-linux-musl]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
