--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ lto = true
 codegen-units = 1
 panic = "abort"
 
-
+[target.x86_64-unknown-linux-gnu]
+pre-build = ["apt-get update && apt-get -y install fontconfig"]
 [dependencies]
 tokio = { version = "1.28.0", features = ["full"] }
 anyhow = "1.0"
