--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ sysinfo = "0.30.12"
 clap = {version="4.2.7",features=["derive"]}
 chrono= "0.4.24"
 byte-unit= "4.0.19"
-sqlx = {version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
+sqlx = {version = "0.7", features = ["sqlite", "tls-rustls","runtime-tokio"] }
+openssl = { version = "0.10.57", features = ["vendored"] }
